ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /transfer-funds
        pathType: Prefix
        backend:
          service:
            name: banking-service
            port:
              number: 80
      - path: /qqq
        pathType: Prefix
        backend:
          service:
            name: banking-service
            port:
              number: 80
